<resources>
    <string name="app_name">Aura Interior Project</string>
    <string name="key_maps" translatable="false">AIzaSyCy_DhxB1vF-WvHSYlOydmi19MD82nK9gM</string>
    <string name="no_data">No Data</string>
    <string name="img_desc">img desc</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="type_wallpaper">Type Wallpaper</string>
    <string name="price">Price</string>
    <string name="title_spacious_room">Cara menghitung :\n\nTerlebih dahulu hitunglah luas ruangan atau luas dari tembok yang akan dipasang.\nJika lebih dari satu ruangan, maka jumlahkan luas masing-masing ruangan.\n\nLalu masukkan nilai luas yang sudah didapat pada kolom dibawah.\n\nCatatan :\n\nHasil dari perhitungan hanya berupa perkiraan atau estimasi. Jumlah dan Biaya sebenarnya akan diketahui setelah dilakukan survei.\n\n Masukkan Luas Ruangan (Meter Persegi)</string>
    <string name="title_estimation_results">Hasil Estimasi</string>
    <string name="roll_estimation">Jumlah Roll Wallpaper yang Didapat :</string>
    <string name="zero_number">0</string>
    <string name="price_estimation">"Total Harga\n(termasuk biaya pemasangan dan harga wallpaper) : "</string>
    <string name="order">Pesan</string>
    <string name="cancel_order">Batal Pesan</string>
    <string name="detail_wallpaper">Detail Wallpaper</string>
    <string name="title_price">Harga : Rp.</string>
    <string name="per_roll">/ Roll</string>
    <string name="form_order_title">Data Diri Pemesan</string>
    <string name="name">Nama : </string>
    <string name="address">Alamat Lengkap : </string>
    <string name="phone">Telepon : </string>
    <string name="location">Lokasi Pemesan : </string>
    <string name="alert_order_title">Peringatan!!</string>
    <string name="alert_order">Pastikan data yang anda kirim sudah benar!!</string>
    <string name="id_default_country" translatable="false">id</string>
    <string name="sign_in_cancel_alert">Sign in cancel</string>
    <string name="check_internet_connection_alert">Check your internet connection</string>
    <string name="my_order_list">Daftar Pesanan Saya</string>
    <string name="out">Keluar</string>
    <string name="alert_message_order_success">Pesanan anda telah diterima oleh admin, silahkan tunggu pemberitahuan selanjutnya.</string>
    <string name="alert_title_order_success">Pesanan berhasil dibuat.</string>
    <string name="input_form_estimation">Masukkan Luas Ruangan (Meter Persegi)</string>
    <string name="date">Date</string>
    <string name="customer_name">Nama Pemesan</string>
    <string name="address_customer">Alamat Pemesan</string>
    <string name="phone_customer">Nomor Telepon Pemesan</string>
    <string name="type_wallpaper_customer">Tipe Wallpaper yang Dipesan</string>
    <string name="order_status">Status Pesanan</string>
    <string name="roll_estimation_customer">Estimasi Roll Wallpaper yang Didapat</string>
    <string name="price_estimation_customer">Estimasi Total Harga yang Didapat (termasuk harga jasa pemasangan)</string>
    <string name="order_date">Tanggal Pesanan</string>
    <string name="waiting_status">Menunggu</string>
    <string name="order_accept_status">Pesanan Diterima</string>
    <string name="order_cancel_status">Pesanan Dibatalkan</string>
    <string name="default_notification_channel_id" translatable="false">6969</string>
    <string name="notification_channel" translatable="false">Aura Interior Project Notification</string>
    <string name="short_lived_task_is_done" translatable="false">Short lived task is done.</string>
</resources>
